Managing FK constraint violation