@@ -3,26 +3,28 @@ package com.sielmed.nsotbackend.service.impl;
 import com.sielmed.nsotbackend.dto.SiteRequestDTO;
 import com.sielmed.nsotbackend.dto.SiteResponseDTO;
 import com.sielmed.nsotbackend.entity.Site;
+import com.sielmed.nsotbackend.exception.ResourceInUseException;
 import com.sielmed.nsotbackend.exception.ResourceNotFoundException;
+import com.sielmed.nsotbackend.repository.DeviceRepository;
 import com.sielmed.nsotbackend.repository.SiteRepository;
 import com.sielmed.nsotbackend.service.SiteService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class SiteServiceImpl implements SiteService {
 
     private final SiteRepository siteRepository;
+    private final DeviceRepository deviceRepository;
 
     @Override
     public List<SiteResponseDTO> findAll() {
         return siteRepository.findAll().stream()
                 .map(this::toResponseDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -57,6 +59,11 @@ public class SiteServiceImpl implements SiteService {
     public void delete(Long id) {
         if (!siteRepository.existsById(id)) {
             throw new ResourceNotFoundException("Site", id);
+        }
+        if (deviceRepository.existsBySiteId(id)) {
+            throw new ResourceInUseException(
+                    "Impossible de supprimer ce site : il est encore utilisé par au moins un device."
+            );
         }
         siteRepository.deleteById(id);
     }
